# django-ulogin

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  AUTHORS  CHANGELOG.txt  LICENSE  MANIFEST.in  Makefile  Pipfile  README  README.rst  coverage.rc  flake8.ini  isort.cfg  pyproject.toml  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: publish-to-test-pypi.yml
django_ulogin/: __init__.py  compat.py  exceptions.py  forms.py  models.py  settings.py  signals.py  urls.py  utils.py  views.py
django_ulogin/locale/ru/LC_MESSAGES/: django.mo  django.po
django_ulogin/templates/django_ulogin/: confirm_delete.html  identities.html  ulogin_media.html  ulogin_widget.html  ulogin_xd.html
django_ulogin/templatetags/: ulogin_tags.py
django_ulogin/tests/: __init__.py  compat.py  identities.py  templatetags.py  urls.py
docs/: Makefile
docs/source/: advanced.rst  authors.rst  base.rst  changelog.rst  conf.py  configuration.rst  contribute.rst  index.rst  license.rst  usage.rst
src/django_ulogin/: __init__.py  forms.py  settings.py  signals.py
src/django_ulogin/locale/ru/LC_MESSAGES/: django.mo
src/django_ulogin/migrations/: 0001_initial.py
src/django_ulogin/templates/django_ulogin/: error.html  ulogin_widget.html
src/django_ulogin/templatetags/: ulogin_tags.py
test_project/: database.sqlite  requirements.txt  settings.py  urls.py
test_project/customize/: admin.py  models.py
test_project/templates/: index.html
test_project/test_project/: settings.py  urls.py
tests/test_project/: requirements.txt
tests/test_project/customize/: models.py
tests/test_project/templates/registration/: logged_out.html
tests/test_project/test_project/: settings.py  urls.py  wsgi.py
tests/tests/: conftest.py  test_main.py
