[tool.poetry]
name = "django-ulogin"
version = "1.1.0"
description = "User social authentication with ulogin.ru service"
authors = ["Mikhail Porokhovnichenko <marazmiki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5 || ^3.6 || ^3.7 || ^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
