[metadata]
name = django-ulogin
version = 1.0.0
description = User social authentication with ulogin.ru service
long_description =
    file:README.rst
author = Mikhail Porokhovnichenko
author_email = marazmiki@gmail.com
url = https://github.com/marazmiki/django-ulogin
download_url = https://github.com/marazmiki/django-ulogin/archive/master.zip
license = MIT
license_file = LICENSE
platforms =
    OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.7
    Framework :: Django :: 1.8
    Framework :: Django :: 1.9
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP :: Session

[options]
install_requires =
    requests
test_suite = tests.main
tests_require =
    tox
    requests
include_package_data = True
exclude_package_data =
    AUTHORS
    LICESNSE
    docs/*

zip_safe = False

[bdist_wheel]
universal = 1

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;; tox settings
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

[tox:tox]
envlist =
    py{27,34}-dj17
    py{27,34,35,36}-dj{18,19,110,111}
    py{34,35,36}-dj{20}

basepython =
    py27: python2.7
    py34: python3.4
    py35: python3.5
    py36: python3.6

[testenv]
deps =
    pytest
    pytest-cov
    pytest-django
    flake8
    coverage
    coveralls
    dj17: django>=1.7,<1.8
    dj18: django>=1.8,<1.9
    dj19: django>=1.9,<1.10
    dj110: django>=1.10,<1.11
    dj111: django>=1.11,<2.0
    dj20: django>=2.0,<2.1

commands =
    pip install -e .
    make coverage

whitelist_externals =
    pytest
    make
    /bin/bash

setenv =
    PYTHONPATH=tests


######## 
envlist =
    dj17-py{27,34}
    dj{18,19,110,111}-py{27,34,35,36}
    dj20-py{34,35,36}
