[metadata]
name = django-ulogin
version = 1.0.5
description = User social authentication with ulogin.ru service
long_description = file: README.rst
author = Mikhail Porokhovnichenko
author_email = marazmiki@gmail.com
url = https://github.com/marazmiki/django-ulogin
download_url = https://github.com/marazmiki/django-ulogin/archive/master.zip
license = MIT
license_file = LICENSE
platforms =
    OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.7
    Framework :: Django :: 1.8
    Framework :: Django :: 1.9
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP :: Session

[options]
install_requires =
    requests
test_suite = tests.main
tests_require =
    tox
    requests
include_package_data = True
exclude_package_data =
    AUTHORS
    LICESNSE
    docs/*

zip_safe = False

[bdist_wheel]
universal = 1

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;; tox settings
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

[tox:tox]
envlist =
    py{27,34}-dj17
    py{27,34,35,36}-dj{18,19,110,111}
    py{34,35,36}-dj{20}
    py{35,36,37,38}-dj{21,22}
    py{36,37,38}-dj{30}

basepython =
    py27: python2.7
    py34: python3.4
    py35: python3.5
    py36: python3.6
    py37: python3.7
    py38: python3.8

[testenv]
deps =
    flake8
    coverage
    dj17:  django>=1.7,<1.8
    dj18:  django>=1.8,<1.9
    dj19:  django>=1.9,<1.10
    dj110: django>=1.10,<1.11
    dj111: django>=1.11,<2.0
    dj20:  django>=2.0,<2.1
    dj21:  django>=2.1,<2.2
    dj22:  django>=2.2,<2.3
    dj30:  django>=3.0,<3.1

commands =
    pip install -e .
    coverage run tests.py
    coverage report
    coverage html

[flake8]
exclude =
    .git
    .tox
    .eggs/
    __pycache__
    docs
    test_project/

[coverage:run]
omit =
    .tox/*
    .eggs/*
    dist/*

[coverage:report]
omit =
    .tox/*
    .eggs/*
    dist/*

[tool:isort]
skip =
   .tox/*
line_length = 79
indent = '    '
multi_line_output = 5
length_sort = 1
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
