[bumpversion]
current_version = 1.0.8
commit = True
tag = True
message = [{new_version} Released]

[metadata]
name = django-ulogin
version = 1.0.7
description = User social authentication with ulogin.ru service
long_description = file: README.rst
author = Mikhail Porokhovnichenko
author_email = marazmiki@gmail.com
url = https://github.com/marazmiki/django-ulogin
download_url = https://github.com/marazmiki/django-ulogin/archive/master.zip
license = MIT
license_file = LICENSE
platforms = 
	OS Independent
classifiers = 
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Internet :: WWW/HTTP :: Session

[options]
install_requires = 
	requests
test_suite = tests.main
tests_require = 
	tox
	requests
include_package_data = True
exclude_package_data = 
	AUTHORS
	LICESNSE
	docs/*
zip_safe = False

[bdist_wheel]
universal = 1

[bumpversion:file:django_ulogin/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"

[tox:tox]
envlist = 
	py{35,36,37,38}-dj{22}
	py{36,37,38}-dj{30,31}
basepython = 
	py35: python3.5
	py36: python3.6
	py37: python3.7
	py38: python3.8

[testenv]
deps = 
	flake8
	coverage
	dj22:  django>=2.2,<2.3
	dj30:  django>=3.0,<3.1
	dj31:  django>=3.1,<3.2
commands = 
	pip install -e .
	coverage run tests.py
	coverage report
	coverage html

[flake8]
exclude = 
	.git
	.tox
	.eggs/
	__pycache__
	docs
	test_project/

[coverage:run]
omit = 
	.tox/*
	.eggs/*
	dist/*

[coverage:report]
omit = 
	.tox/*
	.eggs/*
	dist/*

[tool:isort]
skip = 
	.tox/*
line_length = 79
indent = '    '
multi_line_output = 5
length_sort = 1
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
